potential fix for safari rotateY/z-index issue

--- a/src/components/layout/AnimatedDrawing.module.css
+++ b/src/components/layout/AnimatedDrawing.module.css
@@ -8,6 +8,7 @@
 
 .spinner .face2 {
   transform: rotateY(-90deg);
+  z-index: -500;
 }
 
 .spinner {
